// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Standfirst renders as h4 html tag 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #2e2e2e;
  padding: 1px 0;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.128125em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.11145833333333338em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

<h4
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Standfirst renders as span html tag 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #2e2e2e;
  padding: 1px 0;
  display: inline-block;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.128125em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.11145833333333338em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Standfirst renders with custom style preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #0a68c1;
  padding: 1px 0;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.128125em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.11145833333333338em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

<h2
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Standfirst renders with custom typography preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #2e2e2e;
  font-family: "Source Serif Pro",serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 600;
  letter-spacing: 0;
  padding: 1px 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.128125em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3125em;
}

<h2
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Standfirst renders with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #2e2e2e;
  padding: 1px 0;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.128125em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.11145833333333338em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

<h2
    class="emotion-0"
  />
</DocumentFragment>
`;
